Improve security for Docker images
Change parent Docker image to a publicly available one - Now the base image doesn't have to be built separately

--- a/ballerina-base-image/Dockerfile
+++ b/ballerina-base-image/Dockerfile
@@ -15,30 +15,34 @@
 # -----------------------------------------------------------------------
 
 FROM openjdk:jre-alpine
-MAINTAINER dev@wso2.org
+MAINTAINER tryballerina@gmail.com
 
-ARG BAL_DIST
-
-# Insall Bash
-RUN mkdir -p /ballerina && apk add --update bash && rm -rf /var/cache/apk/*
+ARG BALLERINA_DIST
 
 # Add Ballerina
-COPY ${BAL_DIST} /ballerina/
+COPY ${BALLERINA_DIST} /root/
 COPY scripts/cmd.sh /usr/bin/cmd.sh
 
-
-RUN chmod +x /usr/bin/cmd.sh && \
-    unzip /ballerina/${BAL_DIST} -d /ballerina/ && \
-    rm -rf /ballerina/${BAL_DIST} > /dev/null 2>&1 && \
+# Create folders, unzip distribution, create users, & set permissions.
+RUN mkdir -p /ballerina && \
+    apk add --update bash && \
+    rm -rf /var/cache/apk/* && \
+    chmod +x /usr/bin/cmd.sh && \
+    unzip /root/${BALLERINA_DIST} -d /ballerina/ && \
+    rm -rf /root/${BALLERINA_DIST} > /dev/null 2>&1 && \
     mv /ballerina/ballerina* /ballerina/dist && \
     ln -s /ballerina/dist/bin/ballerina /usr/bin/ballerina && \
     ln -s /ballerina/dist/bin/ballerinaserver /usr/bin/ballerinaserver && \
-    mkdir -p /ballerina/dist/logs
+    mkdir -p /ballerina/dist/logs && \
+    addgroup ballerina && \
+    adduser -S -s /bin/bash -g 'buser' -G ballerina -D buser && \
+    chown -R buser:ballerina /ballerina && \
+    chown buser:ballerina /usr/bin/cmd.sh
 
 ENV BALLERINA_HOME=/ballerina/dist
 WORKDIR /ballerina/dist
+USER buser
+
 EXPOSE 9090
 
-# Ballerina Runner
 ENTRYPOINT ["/usr/bin/cmd.sh"]
-# TODO: Reduce image size (~50MB from copying dist over network)
