--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2</groupId>
         <artifactId>wso2</artifactId>
@@ -115,7 +116,8 @@
                     </filters>
                     <shadedArtifactAttached>false</shadedArtifactAttached>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                         </transformer>
                     </transformers>
                 </configuration>
@@ -165,7 +167,8 @@
                             <licenseFamilyCategory>WSO2</licenseFamilyCategory>
                             <licenseFamilyName>WSO2 License 1.0</licenseFamilyName>
                             <patterns>
-                                <pattern>Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.</pattern>
+                                <pattern>Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+                                </pattern>
                                 <pattern>Copyright (c) 2017, WSO2 Inc. (http://wso2.com) All Rights Reserved.</pattern>
                             </patterns>
                         </license>
@@ -221,7 +224,7 @@
     <properties>
         <maven.findbugsplugin.version.exclude>findbugs-exclude.xml</maven.findbugsplugin.version.exclude>
 
-        <docker.client.version>1.2.1</docker.client.version>
+        <docker.client.version>1.2-SNAPSHOT</docker.client.version>
         <junit.version>4.12</junit.version>
         <testng.version>6.9.4</testng.version>
         <commons.lang3.version>3.5</commons.lang3.version>
