Add run container functionality for Ballerina Service images
Note: This functionality depends on 1.2-SNAPSHOT version of fabric8/docker-client
This functionality is also not supported for remote docker daemons

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,27 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <configuration>
+                    <effort>Max</effort>
+                    <threshold>Low</threshold>
+                    <xmlOutput>true</xmlOutput>
+                    <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
+                    <excludeFilterFile>${maven.findbugsplugin.exclude}</excludeFilterFile>
+                </configuration>
+                <version>${maven.findbugsplugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>analyze-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -222,7 +243,7 @@
     </scm>
 
     <properties>
-        <maven.findbugsplugin.version.exclude>findbugs-exclude.xml</maven.findbugsplugin.version.exclude>
+        <maven.findbugsplugin.exclude>${project.basedir}/findbugs-exclude.xml</maven.findbugsplugin.exclude>
 
         <docker.client.version>1.2-SNAPSHOT</docker.client.version>
         <junit.version>4.12</junit.version>
